Fixes form buttons on mobile devices

--- a/client/src/css/components/modal.css
+++ b/client/src/css/components/modal.css
@@ -30,6 +30,7 @@
   border-radius: var(--spacing);
   box-shadow: 0px 0px var(--spacing) rgba(0, 0, 0, .15);
   transition: var(--transition-100);
+  overflow: hidden;
 }
 
 .modal.is-hidden .modal__inner {
@@ -61,6 +62,10 @@
   min-width: 400px;
 }
 
+.modal__form .form__buttons button {
+  margin-top: 0;
+}
+
 @media screen and (max-width: 440px) {
   .modal:not(.is-hidden) .modal__inner {
     position: fixed;
@@ -83,10 +88,13 @@
 
   .modal__form .form__buttons {
     position: absolute;
-    bottom: var(--spacing);
-    left: var(--spacing);
-    right: var(--spacing);
-    padding-top: var(--spacing);
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: var(--spacing);
     background-color: rgb(var(--color-ui-light));
+    border-top: 1px solid rgba(var(--color-light-blue), .25);
+    border-bottom-left-radius: var(--spacing);
+    border-bottom-right-radius: var(--spacing);
   }
 }
